Simplify https by using "request"

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "main":                 "youtube-feeds.js",
   "dependencies": {
-    "node-xml2json":      ">=1.0.0 <2.0.0"
+    "node-xml2json":      ">=1.0.0 <2.0.0",
+    "request": "2.x.x"
   },
   "devDependencies":      {},
   "optionalDependencies": {},
